--- a/style.css
+++ b/style.css
@@ -19,3 +19,12 @@ body{
 #play{
     font-size: 18px;
 }
+#restart, #status{
+    font-size: 18px;
+}
+.copy-right-footer{
+    bottom: 0;
+    width: 100%;
+    background-color: grey;
+    color: white;
+}
